--- a/src/app/partials/login/login.component.html
+++ b/src/app/partials/login/login.component.html
@@ -8,7 +8,7 @@
     <form [formGroup]="loginForm" *ngIf="loginForm" class="loginForm" (ngSubmit)="login()">
       <div class="form-row">
         <div class="col">
-          <div class="margin-bt color-rd txt-center"><b>{{statusMsg}}</b><br><small>Use 'george.bluth@reqres.in' as username and 'George' as password.</small>
+          <div class="margin-bt color-rd txt-center"><b>{{statusMsg}}</b>
           </div>
         </div>
       </div>
