--- a/src/app/components/admin-template/admin-template.component.html
+++ b/src/app/components/admin-template/admin-template.component.html
@@ -1,12 +1,85 @@
 <p>admin-template works!</p>
 
-<li class="my-template-list-item-container" *ngFor="let template of allTemplates">
-    <div [ngClass]="{'active': template.active }">
-        {{template.templateName}} 
-        <span class="template-list-item-active-span" (click)="templateSelected(template.templateName)">activate</span>
-        <li class="my-template-elements" *ngFor="let elememnt of template  | keyvalue ">
-<!-- Here we need to 1. sort elements by element_order number   2. add a checkbox that toggles "show while calling"  -->
-            <div>{{elememnt.key}} </div>
-        </li>
-    </div>
+<li
+  class="my-template-list-item-container"
+  *ngFor="let template of allTemplates"
+>
+  <div [ngClass]="{ active: template.active }">
+    {{ template.templateName }}
+    <span
+      class="template-list-item-active-span"
+      (click)="templateSelected(template.templateName)"
+      >activate</span
+    >
+    <li
+      class="my-template-elements"
+      *ngFor="let elememnt of template | keyvalue"
+    >
+      <!-- Here we need to 1. sort elements by element_order number   2. add a checkbox that toggles "show while calling"  -->
+      <div>{{ elememnt.key }}</div>
+    </li>
+  </div>
 </li>
+
+<p-fieldset legend="Call info tab" [toggleable]="true">
+  <p-accordion>
+    <p-accordionTab header="Template #0">
+      <p-table
+        #dataTable
+        [columns]="thElements"
+        [value]="elements"
+        [rows]="5"
+        [paginator]="true"
+        [rowsPerPageOptions]="[5, 10, 25, 50]"
+        [(selection)]="tbSelectedRows"
+        [rowHover]="true"
+        dataKey="slIndex"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [showCurrentPageReport]="true"
+      >
+        <ng-template pTemplate="header" let-columns>
+          <tr>
+            <th><p-tableHeaderCheckbox></p-tableHeaderCheckbox></th>
+            <th *ngFor="let col of columns">
+              {{ col.title }}
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-elements let-columns="columns">
+          <tr>
+            <td><p-tableCheckbox [value]="elements"></p-tableCheckbox></td>
+            <td *ngFor="let col of columns">
+              <ng-container *ngIf="col.field === 'visible'; else matIn">
+                <p-checkbox [(ngModel)]="elements[col.field]" [binary]="true">
+                </p-checkbox>
+              </ng-container>
+              <ng-template #matIn>
+                {{ elements[col.field] }}
+              </ng-template>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="paginatorleft">
+          <p-button
+            type="button"
+            icon="pi pi-plus"
+            styleClass="p-button-text"
+          ></p-button>
+        </ng-template>
+        <ng-template pTemplate="paginatorright">
+          <p-button
+            type="button"
+            icon="pi pi-cloud"
+            styleClass="p-button-text"
+          ></p-button>
+        </ng-template>
+      </p-table>
+    </p-accordionTab>
+  </p-accordion>
+  <p-accordion>
+    <p-accordionTab header="Template #1"> Content </p-accordionTab>
+  </p-accordion>
+  <p-accordion>
+    <p-accordionTab header="Template #2"> Content </p-accordionTab>
+  </p-accordion>
+</p-fieldset>
