--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -8,7 +8,13 @@
   left: 0;
   background-color: #e6e7ee;
   box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff;
+}
+
+.partialsContainer{
   overflow-x: hidden;
+  overflow-y: scroll;
+  height: 76%;
+  padding-bottom: 7rem;;
 }
   
 .my-navbar-header {
@@ -36,6 +42,7 @@
   height: 3rem;
   border-radius: 50%;
   border: .0625rem solid transparent;
+  width: 3rem;
 }
   
 .my-navbar-tab:hover {
@@ -62,14 +69,14 @@
 }
 
 .txt-my-navbar{
-  font-size: 0.77rem !important;
+  font-size: 1rem !important;
   overflow-wrap: break-word;
 }
 
 .dropdown-content{
   min-width: 1rem !important;
-  top: 3.9rem !important;
-  left: 1.31rem !important;
+  top: 2.9rem !important;
+  left: 1.5rem !important;
   box-shadow: none !important;
   font-size: 0.55rem;
   width: 4rem !important;
@@ -78,6 +85,8 @@
 .dropdown-content :first-child{
   background-color: transparent !important;
   box-shadow: none !important;
+  border-radius: 50% !important;
+
 }
 
 .dropdown-content :last-child{
