--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,9 @@ body{
   width: 0.3rem;
   border-radius: 2rem;
 }
+::-webkit-scrollbar:hover{
+  width: 1rem;
+}
   
 ::-webkit-scrollbar-track {
   background: #cfcfd6; 
