--- a/src/app/partials/admin-settings/admin-settings.component.html
+++ b/src/app/partials/admin-settings/admin-settings.component.html
@@ -2,6 +2,6 @@
   <div class="col-lg-12 ">
     <h1>{{ userInfo.name }}</h1>
     <hr><br>
-    <app-admin-template></app-admin-template>
+    <admin-navbar-component></admin-navbar-component>
   </div>
 </div>
