--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -1,16 +1,12 @@
-li {
-    list-style-type: none;
-}
-
-.active {
-    color: red;
-}
-
-.template-list-item-active-span {
-    margin-left: 100px;
-    cursor: pointer;
-}
-
 ::ng-deep .p-button-icon-only {
-    visibility: hidden;
+  visibility: hidden;
+}
+
+.template-container {
+  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  border-radius: 0.55em;
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+  margin-left: 1rem;
 }
